--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <script async src="https://js.stripe.com/v3/buy-button.js"></script>
     <title>Titlu</title>
   </head>
-  <body>
+  <body style="background-color: #1f2937">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
